deps/v8/test/message/fail/weak-refs-finalizationregistry2.out
*%(basename)s:7: TypeError: FinalizationRegistry: cleanup must be callable
let fg = new FinalizationRegistry({});
         ^
TypeError: FinalizationRegistry: cleanup must be callable
    at new FinalizationRegistry (<anonymous>)
    at *%(basename)s:7:10
